--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install and build
-        run: npm install && ionic build --prod
+        run: npm install && npm install -g @ionic/cli && npm install -g cordova && ionic build --prod
       
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
