--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "a870a9b3-c41a-4edc-8875-b7946b7c9021"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
