--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media",
   "version": "0.0.1",
   "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "homepage": "https://kendall2106.github.io/MediaTaster-Cliente/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
