--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "author": "Ionic Framework",
   "homepage": "https://kendall2106.github.io/MediaTaster-Cliente/",
   "scripts": {
-    "ng": "ng",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -27,6 +29,7 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "gh-pages": "^5.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
