--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media",
   "version": "0.0.1",
   "author": "Ionic Framework",
-  "homepage": "https://kendall2106.github.io/MediaTaster-Cliente/",
+  "homepage": "https://kendall2106.github.io/MediaTaster-Cliente",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
