--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install and build
-        run: npm install && npm install -g @ionic/cli && npm install -g cordova && ionic build --prod --base-href  https://kendall2106.github.io/MediaTaster-Cliente/
+        run: npm install && npm install -g @ionic/cli && npm install -g cordova && ionic build --prod 
       
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
