--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "IonicDemoV2",
+  "name": "media",
   "version": "0.0.1",
   "author": "Ionic Framework",
-  "homepage": "https://kendall2106.github.io/MediaTaster-Cliente/",
+  "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor/android": "^2.4.5",
-    "@capacitor/cli": "^2.4.5",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/core": "5.2.1",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
-    "fs": "^0.0.1-security",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,6 +43,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/cli": "5.2.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
